[gd_scene load_steps=18 format=3 uid="uid://bu4s3rcevh7c5"]

[ext_resource type="Script" uid="uid://fq87lx2ulagd" path="res://Codes/Day1_AfterPhylisophy.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://pwxaal3fdvel" path="res://Assets/Bg-s/Bg_in_Road.jpg" id="2"]
[ext_resource type="Texture2D" uid="uid://csuidiadogpwi" path="res://Assets/Bg-s/Dialogue_bg.png" id="3"]
[ext_resource type="Script" uid="uid://dxf4tqm3vyigp" path="res://Codes/DialogueBox_AfterPhylosophy.gd" id="4"]
[ext_resource type="FontFile" uid="uid://nd838uhky2oy" path="res://Assets/Comic Sans MS.ttf" id="5"]
[ext_resource type="Texture2D" uid="uid://cquvyv7gstp76" path="res://Assets/Personages/Yuri_standing.png" id="5_27n5o"]
[ext_resource type="Texture2D" uid="uid://ds0gk2tek6at7" path="res://Assets/Personages/Felice_standing.png" id="6_fdr6d"]
[ext_resource type="AudioStream" uid="uid://c8o02xksevrry" path="res://Assets/Music/Effects/Steps1.mp3" id="8_7hwpp"]
[ext_resource type="Shortcut" uid="uid://ffx53vby51kp" path="res://Codes/Buttons/MenuButtonLeave.tres" id="8_j48kx"]
[ext_resource type="Script" uid="uid://d0q8uqg2m2mk" path="res://Codes/Saves_AfterPhylosophy.gd" id="9"]
[ext_resource type="AudioStream" uid="uid://cha4yfb5cowr5" path="res://Assets/Music/Effects/Univer_bell.mp3" id="9_je486"]
[ext_resource type="AudioStream" uid="uid://cq6g2mts8dbd" path="res://Assets/Music/Effects/Crowd_univer.mp3" id="10_pyu67"]
[ext_resource type="Texture2D" uid="uid://chc4in3ahdfyg" path="res://Assets/Bg-s/bg_menu_mini.png" id="11"]
[ext_resource type="Shortcut" uid="uid://cyi44313ku3ww" path="res://Codes/Buttons/MenuButtonEnter.tres" id="11_27n5o"]
[ext_resource type="AudioStream" uid="uid://dbabtec1ohipr" path="res://Assets/Music/Effects/bus_sounds.mp3" id="11_q5qr1"]
[ext_resource type="AudioStream" uid="uid://u8iarqk42lrp" path="res://Assets/Music/Effects/button_music_ultra_short_speedx1.5.mp3" id="14_7hwpp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_47j0m"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 2572.0
offset_bottom = 1472.0
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 2573.0
offset_bottom = 1662.0
texture = ExtResource("2")
flip_h = true

[node name="DialogueBox" type="TextureRect" parent="."]
offset_left = 568.0
offset_top = 1004.0
offset_right = 1230.0
offset_bottom = 1179.0
scale = Vector2(2.2, 2.2)
size_flags_horizontal = 4
size_flags_vertical = 3
texture = ExtResource("3")
expand_mode = 1
script = ExtResource("4")

[node name="In_sc2" type="ColorRect" parent="DialogueBox"]
show_behind_parent = true
layout_mode = 0
offset_left = 340.0
offset_top = -650.0
offset_right = 843.0
offset_bottom = -143.0
rotation = 1.5708
scale = Vector2(2, 2)
color = Color(0, 0, 0, 1)

[node name="Timer" type="Timer" parent="DialogueBox/In_sc2"]

[node name="In_sc3" type="ColorRect" parent="DialogueBox"]
show_behind_parent = true
layout_mode = 0
offset_left = 1345.0
offset_top = -650.0
offset_right = 1848.0
offset_bottom = -143.0
rotation = 1.5708
scale = Vector2(2, 2)
color = Color(0, 0, 0, 1)

[node name="Timer" type="Timer" parent="DialogueBox/In_sc3"]

[node name="Yuri" type="TextureRect" parent="DialogueBox"]
modulate = Color(1, 1, 1, 0)
show_behind_parent = true
clip_children = 2
layout_mode = 0
offset_left = 140.0
offset_top = -420.0
offset_right = 520.0
offset_bottom = 70.0
texture = ExtResource("5_27n5o")
expand_mode = 1

[node name="Felice" type="TextureRect" parent="DialogueBox"]
modulate = Color(1, 1, 1, 0)
show_behind_parent = true
clip_children = 2
layout_mode = 0
offset_left = 92.7273
offset_top = -371.818
offset_right = 544.727
offset_bottom = 69.1818
texture = ExtResource("6_fdr6d")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="DialogueBox"]
layout_mode = 0
offset_left = 13.0
offset_top = 14.0
offset_right = 1292.0
offset_bottom = 204.0
scale = Vector2(0.26, 0.26)

[node name="Name" type="RichTextLabel" parent="DialogueBox/VBoxContainer"]
texture_filter = 6
texture_repeat = 3
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("5")
theme_override_fonts/mono_font = ExtResource("5")
theme_override_fonts/italics_font = ExtResource("5")
theme_override_fonts/bold_italics_font = ExtResource("5")
theme_override_fonts/bold_font = ExtResource("5")
theme_override_font_sizes/normal_font_size = 120
bbcode_enabled = true
text = "Текст"
tab_size = 6
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer5" type="VBoxContainer" parent="DialogueBox"]
layout_mode = 0
offset_left = 17.0
offset_top = 53.0
offset_right = 3157.0
offset_bottom = 527.0
scale = Vector2(0.2, 0.2)

[node name="Text" type="RichTextLabel" parent="DialogueBox/VBoxContainer5"]
custom_minimum_size = Vector2(-1.37, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/text_highlight_h_padding = 6
theme_override_fonts/normal_font = ExtResource("5")
theme_override_font_sizes/normal_font_size = 100
text = "Это крутой текст"
tab_size = 6
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer4" type="VBoxContainer" parent="DialogueBox"]
visible = false
custom_minimum_size = Vector2(0.185, 0)
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.251304
anchor_top = -1.10649
anchor_right = 2.20248
anchor_bottom = -0.239451
offset_left = -72.3633
offset_top = -0.000244141
offset_right = 205.956
offset_bottom = 22.2673
scale = Vector2(0.3, 0.3)
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="Variant21" type="Button" parent="DialogueBox/VBoxContainer4"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "Предложить свою помощь"

[node name="VBoxContainer7" type="VBoxContainer" parent="DialogueBox"]
visible = false
custom_minimum_size = Vector2(0.185, 0)
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.210793
anchor_top = -0.574023
anchor_right = 2.16197
anchor_bottom = 0.293019
offset_left = -45.5452
offset_top = -0.000892639
offset_right = 232.774
offset_bottom = 22.2667
scale = Vector2(0.3, 0.3)
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="Variant3" type="Button" parent="DialogueBox/VBoxContainer7"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "Это не твое дело"

[node name="Timer" type="Timer" parent="DialogueBox"]

[node name="Action" type="RichTextLabel" parent="DialogueBox"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.669621
anchor_top = 0.254793
anchor_right = 0.985317
anchor_bottom = 1.41677
theme_override_font_sizes/normal_font_size = 86
text = "aa"
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer2" type="VBoxContainer" parent="DialogueBox"]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = -0.751346
anchor_top = -4.52023
anchor_right = 1.71779
anchor_bottom = 2.52203
offset_right = 70.9999
offset_bottom = 31.0
size_flags_vertical = 3

[node name="Variant2" type="Button" parent="DialogueBox/VBoxContainer2"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_colors/font_color = Color(1, 1, 1, 0)
theme_override_colors/font_focus_color = Color(0, 0, 0, 0)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 0)
text = "Выбор1"

[node name="Timer2" type="Timer" parent="DialogueBox"]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="DialogueBox"]
stream = ExtResource("8_7hwpp")
volume_db = -30.135
autoplay = true
parameters/looping = true

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="DialogueBox"]
stream = ExtResource("9_je486")
volume_db = -23.787

[node name="AudioStreamPlayer2D4" type="AudioStreamPlayer2D" parent="DialogueBox"]
stream = ExtResource("10_pyu67")
volume_db = -35.0
autoplay = true
parameters/looping = true

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="DialogueBox"]
stream = ExtResource("11_q5qr1")
volume_db = -20.0
parameters/looping = true

[node name="CanvasModulate" type="CanvasModulate" parent="DialogueBox"]
position = Vector2(-258.182, -456.364)
scale = Vector2(0.454545, 0.454545)

[node name="ColorRect3" type="ColorRect" parent="."]
offset_left = 1.0
offset_top = -1597.0
offset_right = 2571.0
offset_bottom = -15.0
color = Color(0.12549, 0.12549, 0.12549, 0.901961)

[node name="Timer1" type="Timer" parent="ColorRect3"]

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect3"]
layout_mode = 0
offset_left = 1000.0
offset_top = 300.0
offset_right = 1808.0
offset_bottom = 490.0
scale = Vector2(0.6, 0.6)

[node name="continue" type="Button" parent="ColorRect3/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 130
shortcut = ExtResource("8_j48kx")
text = "Продолжить"

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect3"]
layout_mode = 0
offset_left = 900.0
offset_top = 450.0
offset_right = 2028.0
offset_bottom = 668.0
scale = Vector2(0.6, 0.6)

[node name="New" type="Button" parent="ColorRect3/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 150
text = "Сохранить игру"

[node name="VBoxContainer3" type="VBoxContainer" parent="ColorRect3"]
layout_mode = 0
offset_left = 900.0
offset_top = 620.0
offset_right = 2028.0
offset_bottom = 838.0
scale = Vector2(0.6, 0.6)

[node name="load" type="Button" parent="ColorRect3/VBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 150
text = "Загрузить игру"

[node name="VBoxContainer4" type="VBoxContainer" parent="ColorRect3"]
layout_mode = 2
offset_left = 1000.0
offset_top = 800.0
offset_right = 1783.0
offset_bottom = 1018.0
scale = Vector2(0.6, 0.6)

[node name="options" type="Button" parent="ColorRect3/VBoxContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 150
text = "Настройки"

[node name="VBoxContainer5" type="VBoxContainer" parent="ColorRect3"]
layout_mode = 2
offset_left = 1000.0
offset_top = 1000.0
offset_right = 1763.0
offset_bottom = 1218.0
scale = Vector2(0.6, 0.6)

[node name="exit" type="Button" parent="ColorRect3/VBoxContainer5"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 150
text = "Выход"

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = -3020.0
offset_top = -3.0
offset_right = -2.0
offset_bottom = 1442.0
color = Color(0.12549, 0.12549, 0.12549, 0.901961)

[node name="Timer1" type="Timer" parent="ColorRect2"]

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect2"]
layout_mode = 0
offset_left = 2200.0
offset_top = 250.0
offset_right = 2458.0
offset_bottom = 403.0
scale = Vector2(0.8, 0.8)

[node name="Sound" type="Button" parent="ColorRect2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 100
text = "Вкл"

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect2"]
layout_mode = 0
offset_left = 270.0
offset_top = 220.0
offset_right = 655.0
offset_bottom = 467.0
scale = Vector2(0.9, 0.9)

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect2/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("5")
theme_override_font_sizes/normal_font_size = 140
text = "Звук"

[node name="VBoxContainer3" type="VBoxContainer" parent="ColorRect2"]
layout_mode = 0
offset_left = 1100.0
offset_top = 1000.0
offset_right = 1390.0
offset_bottom = 1149.0
scale = Vector2(0.9, 0.9)

[node name="Sound2" type="Button" parent="ColorRect2/VBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 100
text = "Назад"

[node name="ColorRect4" type="ColorRect" parent="."]
offset_left = 2600.0
offset_top = -3.0
offset_right = 5618.0
offset_bottom = 1442.0
color = Color(0.12549, 0.12549, 0.12549, 0.901961)

[node name="Timer1" type="Timer" parent="ColorRect4"]

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect4"]
layout_mode = 0
offset_left = 780.0
offset_top = 60.0
offset_right = 1824.0
offset_bottom = 307.0
scale = Vector2(0.9, 0.9)

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect4/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("5")
theme_override_font_sizes/normal_font_size = 140
text = "Загрузить игру"

[node name="VBoxContainer3" type="VBoxContainer" parent="ColorRect4"]
layout_mode = 0
offset_left = 1115.0
offset_top = 1100.0
offset_right = 1405.0
offset_bottom = 1249.0
scale = Vector2(0.9, 0.9)

[node name="Exit2" type="Button" parent="ColorRect4/VBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 100
text = "Назад"

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect4"]
layout_mode = 0
offset_left = 605.0
offset_top = 263.0
offset_right = 1890.0
offset_bottom = 922.0
size_flags_vertical = 3

[node name="SaveContainer" type="VBoxContainer" parent="ColorRect4/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect4"]
layout_mode = 0
offset_left = 600.0
offset_top = 977.0
offset_right = 3200.0
offset_bottom = 1113.0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("9")

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect4/VBoxContainer"]
layout_mode = 2

[node name="Save" type="Button" parent="ColorRect4/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 70
disabled = true
text = "Сохранить"

[node name="Load" type="Button" parent="ColorRect4/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 70
disabled = true
text = "Загрузить"

[node name="Delete" type="Button" parent="ColorRect4/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 70
disabled = true
text = "Удалить"

[node name="buttons" type="AudioStreamPlayer2D" parent="ColorRect4/VBoxContainer/HBoxContainer"]
position = Vector2(-6400, -1948)
scale = Vector2(2, 2)
stream = ExtResource("14_7hwpp")
volume_db = -17.0

[node name="PhraseNum2" type="RichTextLabel" parent="ColorRect4/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 1.0
offset_top = 1.59998
offset_right = 68.0
offset_bottom = 62.6
scale = Vector2(2, 2)
size_flags_vertical = 3

[node name="Menu_button" type="Button" parent="VBoxContainer3"]
modulate = Color(1, 1, 1, 0.560784)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_47j0m")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_47j0m")
theme_override_styles/hover = SubResource("StyleBoxEmpty_47j0m")
theme_override_styles/normal = SubResource("StyleBoxEmpty_47j0m")
shortcut = ExtResource("11_27n5o")
icon = ExtResource("11")

[connection signal="pressed" from="DialogueBox/VBoxContainer4/Variant21" to="DialogueBox" method="_on_variant_21_pressed"]
[connection signal="pressed" from="DialogueBox/VBoxContainer7/Variant3" to="DialogueBox" method="_on_variant_3_pressed"]
[connection signal="pressed" from="DialogueBox/VBoxContainer2/Variant2" to="DialogueBox" method="_on_variant_2_pressed"]
[connection signal="pressed" from="ColorRect3/VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="ColorRect3/VBoxContainer2/New" to="ColorRect4/VBoxContainer" method="_on_new_pressed"]
[connection signal="pressed" from="ColorRect3/VBoxContainer3/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="ColorRect3/VBoxContainer4/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="ColorRect3/VBoxContainer5/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="ColorRect2/VBoxContainer3/Sound2" to="." method="_on_sound_2_pressed"]
[connection signal="pressed" from="ColorRect4/VBoxContainer3/Exit2" to="." method="_on_exit_2_pressed"]
[connection signal="pressed" from="ColorRect4/VBoxContainer/HBoxContainer/Save" to="ColorRect4/VBoxContainer" method="_on_save_pressed"]
[connection signal="pressed" from="ColorRect4/VBoxContainer/HBoxContainer/Load" to="ColorRect4/VBoxContainer" method="_on_load_pressed"]
[connection signal="pressed" from="ColorRect4/VBoxContainer/HBoxContainer/Delete" to="ColorRect4/VBoxContainer" method="_on_delete_pressed"]
[connection signal="pressed" from="VBoxContainer3/Menu_button" to="." method="_on_menu_button_pressed"]
